--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VUE_APP_API_URL=https://bingo-royalty-api.herokuapp.com/api/v1.0/
+#VUE_APP_API_URL=https://bingo-royalty-api.herokuapp.com/api/v1.0/
+VUE_APP_API_URL=http://localhost:8000/api/v1.0/
