--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "hooper": "^0.3.4",
+    "moment": "^2.29.3",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
     "vue-session": "^1.0.0",
     "vue-slick-carousel": "^1.0.6",
+    "vue2-dropzone": "^3.6.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
