--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@sweetalert2/theme-dark": "^5.0.11",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
@@ -14,11 +15,13 @@
     "hooper": "^0.3.4",
     "moment": "^2.29.3",
     "register-service-worker": "^1.7.1",
+    "sweetalert2": "^11.4.14",
     "vue": "^2.6.11",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
     "vue-session": "^1.0.0",
     "vue-slick-carousel": "^1.0.6",
+    "vue-sweetalert2": "^5.0.5",
     "vue2-dropzone": "^3.6.0",
     "vuex": "^3.4.0"
   },
