--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bingo-front",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -12,15 +12,18 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "hooper": "^0.3.4",
     "moment": "^2.29.3",
     "register-service-worker": "^1.7.1",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "sweetalert2": "^11.4.14",
     "vue": "^2.6.11",
+    "vue-good-table": "^2.21.11",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
     "vue-session": "^1.0.0",
     "vue-slick-carousel": "^1.0.6",
+    "vue-socket.io": "^3.0.10",
     "vue-sweetalert2": "^5.0.5",
     "vue2-dropzone": "^3.6.0",
     "vuex": "^3.4.0"
