--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "socket.io-client": "^4.5.1",
     "sweetalert2": "^11.4.14",
     "vue": "^2.6.11",
+    "vue-flickity": "^1.2.1",
     "vue-good-table": "^2.21.11",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
