--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VUE_APP_API_URL=http://www.freiborse.com/bingo-royalty-api/public/api/v1.0/
 
-VUE_APP_API_BASE=http://www.freiborse.com/
+VUE_APP_API_BASE=http://www.freiborse.com/bingo-royalty-api/public
