--- a/.env
+++ b/.env
@@ -5,5 +5,7 @@ VUE_APP_API_BASE=http://localhost:8000
 
 VUE_APP_API_URL=http://localhost:8000/api/v1.0/
 
-MIX_OCULAR_URL_LISTEN=http://localhost:4000
+#Socket
+MIX_URL_LISTEN=http://localhost:4000
 
+MIX_APP_DEBUG='develop'
