new changes socket

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ VUE_APP_API_BASE=http://localhost:8000
 VUE_APP_API_URL=http://localhost:8000/api/v1.0/
 
 #Socket
-MIX_URL_LISTEN=http://localhost:4000
+VUE_APP_URL_LISTEN=http://localhost:4000
 
-MIX_APP_DEBUG='develop'
+VUE_APP_DEBUG='develop'
