--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-slick-carousel": "^1.0.6",
     "vue-socket.io": "^3.0.10",
     "vue-sweetalert2": "^5.0.5",
+    "vue-ui-preloader": "^1.2.1",
     "vue2-dropzone": "^3.6.0",
     "vuex": "^3.4.0"
   },
