--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
     "register-service-worker": "^1.7.1",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
